// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JS Components/Tooltip Central smoke-test 1`] = `
<div class="grid grid-cols-2 gap-16 w-[600px]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-256 h-256 bg-neutral-1300 flex items-center justify-center m-24 border mx-auto rounded-lg">
    <div class="relative inline-block align-top h-16 ">
      <button type="button"
              aria-describedby="tooltip"
              class="ml-8 p-0 relative top-1 focus:outline-none "
      >
        <svg class="text-neutral-500 "
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-256 h-256 flex items-center justify-center m-24 border mx-auto rounded-lg">
    <div class="relative inline-block align-top h-16 ">
      <button type="button"
              aria-describedby="tooltip"
              class="ml-8 p-0 relative top-1 focus:outline-none "
      >
        <svg class="text-neutral-800 "
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`JS Components/Tooltip LeftBound smoke-test 1`] = `
<div class="grid grid-cols-2 gap-16 w-[600px]">
  <div class="font-mono text-center">
    dark
  </div>
  <div class="font-mono text-center">
    light
  </div>
  <div class="w-256 h-256 bg-neutral-1300 flex items-center m-24 border mx-auto rounded-lg">
    <div class="relative inline-block align-top h-16 ">
      <button type="button"
              aria-describedby="tooltip"
              class="ml-8 p-0 relative top-1 focus:outline-none "
      >
        <svg class="text-neutral-500 "
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </div>
  <div class="w-256 h-256 flex items-center m-24 border mx-auto rounded-lg">
    <div class="relative inline-block align-top h-16 ">
      <button type="button"
              aria-describedby="tooltip"
              class="ml-8 p-0 relative top-1 focus:outline-none "
      >
        <svg class="text-neutral-800 "
             style="width: 1rem; height: 1rem;"
        >
          <use xlink:href="#sprite-icon-gui-info">
          </use>
        </svg>
      </button>
    </div>
  </div>
</div>
`;
